# pydep_tool

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
pydep_tool/: __init__.py  _scanner.py
wizard_ware/: __init__.py
